# qwen-memory-agent

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  DEPLOYED_SHA  LICENSE  README.md  ROADMAP.md  SECURITY.md  ab_result.json  bench.sh  calibration_result.json  cli.py  context_window_bench.json  gate_sweep.json  generalization_result.json  latency_bench.json  longmemeval_result.json  poison_curve.json  poison_multiclass.json  pyproject.toml  pytest.ini  requirements.txt  smoke.sh  tune_result.json
architecture/: ARCHITECTURE.md
backend/: agent_loop.py  confidence.py  config.py  evaluation.py  events.py  extractor.py  graph.py  ledger.py  main.py  memory.py  qwen_client.py  retrieval.py  reviser.py  synthesis.py  telemetry.py
deploy/: README.md  check_reasoning.sh  deploy_proof.sh  redeploy_and_verify.sh  redeploy_sprint.sh  verify_wave1_staging.py
docs/: BUILD_PLAN.md  COMPETITIVE.md  DEMO_SCRIPT.md  DEMO_SCRIPT_v2.md  DEMO_SCRIPT_v3.md  DEVPOST.md  HACKATHON.md  HANDOFF.md  IDEA_DECISION.md  JUDGING.md  PROOF_PACK.md  PRO_PLAYBOOK.md  benchmark.md
frontend/: app.js  graph.html  index.html  styles.css
handoff/: AUFNAHME-ANLEITUNG.md  linkedin-update-2026-07-10.md
harness/: ab_runner.py  backfill_links.py  benchmark.py  calibration.py  context_window_bench.py  gate_sweep.py  generalization.py  ground_demo.py  ground_spread.py  latency_bench.py  longmemeval_eval.py  mcp_vignette.py  poison_curve.py  rebuild_demo.py  rerank_eval.py  revert_bad_grounding.py  seed_demo.py  seed_rich.py  seed_timeline.py
mcp_tool/: README.md  _safety.py  (+1 more)
(+83 files in other folders)
